デプロイ対応（Render + Neon + GitHub Actions）
- application-prod.properties作成（本番環境用設定）
- application-scrape.properties作成（GitHub Actions用スクレイピング設定）
- ScrapeCommandRunner作成（GitHub Actions用CLIスクレイピング実行）
- SecurityConfigのCORS設定を環境変数対応に変更
- GitHub Actionsワークフロー作成（定期スクレイピング）
- TASKS.mdにデプロイタスク追記

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>